bugfix: ios overflow issue

--- a/src/styles/devHacksSponsors.scss
+++ b/src/styles/devHacksSponsors.scss
@@ -5,10 +5,10 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 30px;
+  gap: 20px;
 }
 
-.center-sponsor {
+.gold-sponsor {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,7 @@
 .sponsors-row {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  // gap: 20px;
 }
 
 .sponsor {
@@ -32,7 +32,7 @@
   object-fit: contain;
 }
 
-.center-sponsor img {
+.gold-sponsor img {
   max-width: 500px;
   height: auto;
   object-fit: contain;
@@ -43,7 +43,7 @@
     flex-wrap: wrap;
   }
 
-  .centre-sponsor img {
+  .gold-sponsor img {
     max-width: 400px;
   }
   .sponsor img {
@@ -56,9 +56,9 @@
     flex-wrap: wrap;
   }
   .sponsor img {
-    max-width: 110px;
+    max-width: 90px;
   }
-  .center-sponsor img {
-    max-width: 350px;
+  .gold-sponsor img {
+    max-width: 300px;
   }
 }
